; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/virtio/network/extr_if_vtnet.c_vtnet_copy_maddr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/virtio/network/extr_if_vtnet.c_vtnet_copy_maddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_dl = type { i32 }
%struct.vtnet_mac_filter = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@VTNET_MAX_MAC_ENTRIES = common dso_local global i64 0, align 8
@ETHER_ADDR_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, %struct.sockaddr_dl*, i64)* @vtnet_copy_maddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @vtnet_copy_maddr(i8* %0, %struct.sockaddr_dl* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sockaddr_dl*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.vtnet_mac_filter*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.sockaddr_dl* %1, %struct.sockaddr_dl** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.vtnet_mac_filter*
  store %struct.vtnet_mac_filter* %9, %struct.vtnet_mac_filter** %7, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @VTNET_MAX_MAC_ENTRIES, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %24

13:                                               ; preds = %3
  %14 = load %struct.sockaddr_dl*, %struct.sockaddr_dl** %5, align 8
  %15 = call i32 @LLADDR(%struct.sockaddr_dl* %14)
  %16 = load %struct.vtnet_mac_filter*, %struct.vtnet_mac_filter** %7, align 8
  %17 = getelementptr inbounds %struct.vtnet_mac_filter, %struct.vtnet_mac_filter* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = load i64, i64* %6, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i32, i32* @ETHER_ADDR_LEN, align 4
  %23 = call i32 @bcopy(i32 %15, i32* %21, i32 %22)
  br label %24

24:                                               ; preds = %13, %3
  ret i64 1
}

declare dso_local i32 @bcopy(i32, i32*, i32) #1

declare dso_local i32 @LLADDR(%struct.sockaddr_dl*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
